--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
 
-  "engines": {
-    "node": ">=8.10.0"
-  },
   "dependencies": {
     "@types/cors": "^2.8.13",
     "@types/multer": "^1.4.7",
@@ -55,6 +52,7 @@
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "rimraf": "^5.0.1"
   }
 }
